# tui-notes

./: Cargo.toml  README.md  RUNBOOK.md  install.sh
src/: app.rs  cli.rs  content.rs  editor.rs  fs_ops.rs  fuzzy.rs  input.rs  lib.rs  main.rs  md.rs  models.rs  notes.rs  store.rs
src/ui/: add_popup.rs  footer.rs  mod.rs  popup.rs  preview.rs  reminders.rs  search.rs  tree.rs
tests/: tui_pty.rs
